--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,36 @@
 
     <build>
         <plugins>
+
+            <!-- CRIAR FAT JAR EXECUTÁVEL -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.4</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <archive>
+                        <manifest>
+                            <mainClass>cncs.academy.ess.App</mainClass>
+                        </manifest>
+                    </archive>
+
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
+
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+
         </plugins>
     </build>
     <repositories>
