--- a/.github/workflows/cicd-base.yml
+++ b/.github/workflows/cicd-base.yml
@@ -3,20 +3,20 @@ on:
   workflow_dispatch:
 
 env:
-  # Use docker.io for Docker Hub
+  # Use ghcr.io for GitHub Container Registry
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  security-scan:
+  # JOB 1 — até SAST (e FS scan)
+  sast:
     runs-on: ubuntu-latest
     permissions:
       security-events: write
       actions: read
       contents: read
-      packages: write
-      
+
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -24,8 +24,8 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '21'
+          distribution: temurin
+          java-version: "21"
 
       # Run unit tests
       - name: Build e testes (JUnit)
@@ -36,39 +36,49 @@ jobs:
         uses: github/codeql-action/init@v4
         with:
           languages: java
-          
+
       - name: Build for CodeQL Analysis
         run: mvn clean compile
-          
+
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
 
-      # Trivy
-      - name: Complete scan with Trivy
+      # Trivy (repo filesystem scan: vuln + secrets + config)
+      - name: Complete scan with Trivy (fs)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          scan-type: 'fs'                      
-          scanners: 'vuln,secret,config'     
-          severity: 'CRITICAL,HIGH'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-      
-      - name: Upload SARIF
+          scan-type: fs
+          scanners: vuln,secret,config
+          severity: CRITICAL,HIGH
+          format: sarif
+          output: trivy-results.sarif
+
+      - name: Upload SARIF (fs)
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trivy-results.sarif
 
-      - name: Upload artifact to pipeline metadata
+      - name: Upload artifact (fs)
         uses: actions/upload-artifact@v4
         with:
-          name: Generate artifact with Trivy result
+          name: trivy-fs-results
           path: trivy-results.sarif
 
-      - name: Checkout repository
+  # JOB 2 — build + scan imagem + push (depende do Job 1)
+  docker:
+    needs: sast
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # (só precisas disto se também fizeres upload-sarif aqui)
+      security-events: write
+
+    steps:
+      - name: Checkout do código
         uses: actions/checkout@v4
-      
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
+
+      # Login against GHCR
       - name: Log into registry ${{ env.REGISTRY }}
         uses: docker/login-action@v3
         with:
@@ -90,6 +100,40 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      # (2d) Build AMD64 local (para scan da imagem antes do push final)
+      - name: Build Docker image (amd64 for scan)
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64
+          push: false
+          load: true
+
+      # (2d) Trivy image scan
+      - name: Run Trivy vulnerability scanner (image)
+        uses: aquasecurity/trivy-action@0.33.1
+        with:
+          image-ref: ${{ steps.meta.outputs.tags }}
+          format: sarif
+          output: trivy-image-results.sarif
+          severity: CRITICAL,HIGH
+
+      - name: Upload artifact (image)
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-image-results
+          path: trivy-image-results.sarif
+
+      # Se também quiseres aparecer em "Security > Code scanning alerts"
+      - name: Upload SARIF (image)
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: trivy-image-results.sarif
+
       # Push multi-arch (AMD64 + ARM64)
       - name: Push Docker image (multi-arch)
         uses: docker/build-push-action@v5
@@ -100,3 +144,14 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
           push: true
+
+      # (2e) Assinatura (cosign) — deixa ativo se já estás a fazer o ponto e)
+      # - name: Install cosign
+      #   uses: sigstore/cosign-installer@v3
+      #
+      # - name: Sign all image tags
+      #   run: |
+      #     echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n' | while read tag; do
+      #       echo "Signing $tag ..."
+      #       cosign sign --yes "$tag"
+      #     done
