Refactor CI/CD workflow and update comments

--- a/.github/workflows/cicd-base.yml
+++ b/.github/workflows/cicd-base.yml
@@ -3,9 +3,7 @@ on:
   workflow_dispatch:
 
 env:
-  # GitHub Container Registry
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -42,7 +40,7 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
 
-      # Trivy - filesystem scan (vuln + secrets + config)
+      # Trivy - filesystem scan
       - name: Complete scan with Trivy (fs)
         uses: aquasecurity/trivy-action@0.20.0
         with:
@@ -63,7 +61,7 @@ jobs:
           name: trivy-fs-results
           path: trivy-results.sarif
 
-  # JOB 2 — build + scan imagem (2d) + push multi-arch
+  # JOB 2 — build + scan imagem (2d) + push + sign (2e)
   docker:
     needs: sast
     runs-on: ubuntu-latest
@@ -71,12 +69,12 @@ jobs:
       contents: read
       packages: write
       security-events: write
+      id-token: write   # ✅ necessário para cosign com OIDC
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      # Login GHCR
       - name: Log into registry ${{ env.REGISTRY }}
         uses: docker/login-action@v3
         with:
@@ -84,7 +82,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # QEMU + Buildx
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -97,7 +94,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # (2d) Build AMD64 local (to scan the image BEFORE final push)
+      # (2d) Build AMD64 local (para scan ANTES do push final)
       - name: Build Docker image (amd64 for scan)
         id: build
         uses: docker/build-push-action@v5
@@ -110,7 +107,7 @@ jobs:
           push: false
           load: true
 
-      # (2d) Scan image with Trivy
+      # (2d) Scan imagem com Trivy
       - name: Run Trivy vulnerability scanner (image)
         uses: aquasecurity/trivy-action@0.33.1
         with:
@@ -119,20 +116,19 @@ jobs:
           output: trivy-image-results.sarif
           severity: CRITICAL,HIGH
 
-      # (2d) Upload results as pipeline artifact
       - name: Upload artifact to pipeline metadata (image)
         uses: actions/upload-artifact@v4
         with:
           name: Generate artifact with Trivy image result
           path: trivy-image-results.sarif
 
-      # Optional: also publish SARIF to Code Scanning
+      # (opcional) também publicar no Code Scanning
       - name: Upload SARIF (image)
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trivy-image-results.sarif
 
-      # Final push multi-arch (AMD64 + ARM64)
+      # Push multi-arch final (AMD64 + ARM64)
       - name: Push Docker image (multi-arch)
         uses: docker/build-push-action@v5
         with:
@@ -142,3 +138,14 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
           push: true
+
+      # (2e) Assinar a imagem (DEPOIS do push)
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3
+
+      - name: Sign all image tags
+        run: |
+          echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n' | while read tag; do
+            echo "Signing $tag ..."
+            cosign sign --yes "$tag"
+          done
